; ModuleID = '/home/carl/AnghaBench/git/extr_split-index.c_init_split_index.c'
source_filename = "/home/carl/AnghaBench/git/extr_split-index.c_init_split_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.split_index = type { i32 }
%struct.index_state = type { %struct.split_index* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.split_index* @init_split_index(%struct.index_state* %0) #0 {
  %2 = alloca %struct.index_state*, align 8
  store %struct.index_state* %0, %struct.index_state** %2, align 8
  %3 = load %struct.index_state*, %struct.index_state** %2, align 8
  %4 = getelementptr inbounds %struct.index_state, %struct.index_state* %3, i32 0, i32 0
  %5 = load %struct.split_index*, %struct.split_index** %4, align 8
  %6 = icmp ne %struct.split_index* %5, null
  br i1 %6, label %15, label %7

7:                                                ; preds = %1
  %8 = call %struct.split_index* @xcalloc(i32 1, i32 4)
  %9 = load %struct.index_state*, %struct.index_state** %2, align 8
  %10 = getelementptr inbounds %struct.index_state, %struct.index_state* %9, i32 0, i32 0
  store %struct.split_index* %8, %struct.split_index** %10, align 8
  %11 = load %struct.index_state*, %struct.index_state** %2, align 8
  %12 = getelementptr inbounds %struct.index_state, %struct.index_state* %11, i32 0, i32 0
  %13 = load %struct.split_index*, %struct.split_index** %12, align 8
  %14 = getelementptr inbounds %struct.split_index, %struct.split_index* %13, i32 0, i32 0
  store i32 1, i32* %14, align 4
  br label %15

15:                                               ; preds = %7, %1
  %16 = load %struct.index_state*, %struct.index_state** %2, align 8
  %17 = getelementptr inbounds %struct.index_state, %struct.index_state* %16, i32 0, i32 0
  %18 = load %struct.split_index*, %struct.split_index** %17, align 8
  ret %struct.split_index* %18
}

declare dso_local %struct.split_index* @xcalloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
